// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preliminaryReducer Reducer should fetch preliminary data 1`] = `
Object {
  "notify": 0,
  "preliminaryDetails": undefined,
}
`;

exports[`preliminaryReducer Reducer should populate error.If get fails 1`] = `
Object {
  "notify": 0,
  "preliminaryDetails": Array [],
}
`;

exports[`preliminaryReducer Reducer should populate error.If save fails 1`] = `
Object {
  "notify": 2,
  "preliminaryDetails": Array [],
}
`;

exports[`preliminaryReducer Reducer should populate error.If update fails 1`] = `
Object {
  "notify": 0,
  "preliminaryDetails": Array [],
}
`;

exports[`preliminaryReducer Reducer should save preliminary data 1`] = `
Object {
  "notify": 1,
  "preliminaryDetails": Array [],
}
`;

exports[`preliminaryReducer Reducer should update preliminary data 1`] = `
Object {
  "notify": 1,
  "preliminaryDetails": Array [],
}
`;
